# AD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
codebase/apriltags/: CMakeLists.txt
codebase/apriltags/example/: CMakeLists.txt  april_locator.cpp
codebase/libbot2/.svn/: wc.db
codebase/media/wavefront/quadrotor/: quadrotor_model (copy).mtl  quadrotor_model.mtl  quadrotor_model.mtl~  quadrotor_model.obj~
codebase/trunk/: procman-config  tobuild.txt
codebase/trunk/_abandoned/stateEstimatorOrientV1/: Makefile
codebase/trunk/_abandoned/stateEstimatorOrientV1/src/: CMakeLists.txt  mrdivide.c  qekf.c  qekf.h  rtwtypes.h  stateEstimatorOrientV1.cpp  stateEstimatorOrientV1.hpp
codebase/trunk/controllerPDOrient/: CMakeLists.txt
codebase/trunk/controllerPDOrient/cmake/: pods.cmake
codebase/trunk/controllerPDOrient/src/: CMakeLists.txt  controllerPDOrient.cpp  controllerPDOrient.cpp~  controllerPDOrient.hpp
codebase/trunk/controllerPDPose/: CMakeLists.txt
codebase/trunk/controllerPDPose/src/: CMakeLists.txt  controllerPDPose.cpp  controllerPDPose.hpp
codebase/trunk/controllerSOCOrient/: CMakeLists.txt  InterfaceSuggestion
codebase/trunk/controllerSOCOrient/src/: CMakeLists.txt  controllerPDOrient.cpp~  controllerPDOrient.hpp~  controllerSOCOrient.cpp  controllerSOCOrient.cpp~  controllerSOCOrient.hpp  controllerSOCOrient.hpp~
codebase/trunk/detectorVIS/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt
codebase/trunk/detectorVIS/src/: #CMakeLists.txt#  #detectorVIS.cpp#  #detectorVIS.hpp#  .#detectorVIS.cpp  .#detectorVIS.hpp  CMakeLists.txt  detectorVIS.cpp  detectorVIS.hpp
codebase/trunk/examplePod/: CMakeLists.txt
codebase/trunk/examplePod/src/: CMakeLists.txt  examplePod.cpp  examplePod.hpp
codebase/trunk/framework/: coreScheduling.sh  coreScheduling_undo.sh  framework.hpp  framework.hpp~  parameters.hpp  params.hpp  paramsControllerPDOrient.hpp  paramsControllerPDPose.hpp  paramsDetectorVIS.hpp  paramsExamplePod.hpp  paramsImuAcquisition.hpp  paramsMotorCommander.hpp  paramsRamperPWM.hpp  paramsRemoteController.hpp  paramsSimulator.hpp
codebase/trunk/imuAcquisition/: CMakeLists.txt
codebase/trunk/imuAcquisition/src/: CMakeLists.txt  imuAcquisition.cpp  imuAcquisition.cpp~  imuAcquisition.hpp
codebase/trunk/lcmtypes/: Makefile
codebase/trunk/lcmtypes/cmake/: lcmtypes.cmake
codebase/trunk/lcmtypes/lcmtypes/: .gitignore  features_t.lcm  imuRaw_t.lcm  pose_t.lcm  powerAdjust_t.lcm  stateVariances_t.lcm  state_t.lcm  statusDrone_t.lcm  statusPod_t.lcm  tags_t.lcm
codebase/trunk/motorCommander/: CMakeLists.txt
codebase/trunk/motorCommander/src/: CMakeLists.txt  motorCommander.cpp  motorCommander.cpp~  motorCommander.hpp  motorCommander.hpp~
codebase/trunk/poseEstimVis/: CMakeLists.txt
codebase/trunk/poseEstimVis/src/: CMakeLists.txt  poseEstimVis.cpp  poseEstimVis.hpp
codebase/trunk/ramperPWM/: CMakeLists.txt
codebase/trunk/ramperPWM/src/: CMakeLists.txt  ramperPWM.cpp  ramperPWM.hpp
codebase/trunk/remoteController/: CMakeLists.txt
codebase/trunk/remoteController/src/: CMakeLists.txt  remoteController.cpp  remoteController.hpp
codebase/trunk/simulator/: CMakeLists.txt
codebase/trunk/simulator/src/: CMakeLists.txt  simulator.cpp  simulator.hpp
codebase/trunk/simulator/src/simulink/: SimulatorDrone.c  SimulatorDrone.def  SimulatorDrone.h  SimulatorDrone_private.h  SimulatorDrone_types.h  buildInfo.mat  build_exception.mat  builtin_typeid_types.h  codeInfo.mat  defines.txt  modelsources.txt  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
codebase/trunk/stateEstimatorOrientCF/: CMakeLists.txt
codebase/trunk/stateEstimatorOrientCF/src/: CMakeLists.txt  stateEstimatorOrientCF.cpp  stateEstimatorOrientCF.hpp
codebase/trunk/stateEstimatorOrientV1/: CMakeLists.txt
codebase/trunk/stateEstimatorOrientV1/src/: mrdivide.h  norm.c  qekf_initialize.h  qekf_terminate.h  stateEstimator.cpp~  stateEstimatorOrientV1.cpp  stateEstimatorOrientV1.cpp~  stateEstimatorOrientV1.hpp  stateEstimatorOrientV1.hpp~
codebase/trunk/testsender/: CMakeLists.txt
codebase/trunk/testsender/src/: CMakeLists.txt  testsender.cpp  testsender.cpp~
codebase/trunk/viewer/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
codebase/trunk/viewer/src/: viewer.cpp
codebase/trunk/watchdog/: CMakeLists.txt
codebase/trunk/watchdog/src/: CMakeLists.txt  watchdog.cpp  watchdog.cpp~  (+2 more)
codebase_lowlevel/actuators/Arduino/: INFOactuatorcode.txt  README.md
codebase_lowlevel/actuators/C/: pwm_serial2  pwm_serial2.c
codebase_lowlevel/arduino_libraries/PinChangeInt/: PinChangeInt.h
codebase_lowlevel/configurationScripts/: coreScheduling_DedicatedList.txt  coreScheduling_activate.sh  coreScheduling_setup.sh  networkconfig.sh
codebase_lowlevel/estimation/MATLAB/: calibration.m  qekf.m  test_qekf.m
codebase_lowlevel/sensors/C/: imu_serial.c  imu_serial_2
codebase_lowlevel/vision/: pgr2opencv.cpp
codebase_lowlevel/vision/locator/: CMakeCache.txt  CMakeLists.txt  Makefile  april_locator.cpp  camera  cmake_install.cmake  locator.cpp
codebase_lowlevel/vision/recording/: CMakeCache.txt  CMakeLists.txt  camera  cmake_install.cmake  recorder.cpp
codebase_tmpdrafts/estimation/MATLAB/: test02.m
simulation/Simulation/: parameters_estimationcontrol.m  sim_quadrotor.slx  simpleOrientationSim.slx
simulation/libs/RoboticsToolbox/: droneOutputs.m  mdl_quadrotor.m  quadrotor_dynamics.m
templateToolboxes/codebase/trunk/pose/: CMakeLists.txt
templateToolboxes/codebase/trunk/pose/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake
templateToolboxes/codebase/trunk/pose/pod-build/src/: Makefile  cmake_install.cmake
templateToolboxes/codebase/trunk/pose/src/: CMakeLists.txt  pose.cpp
templateToolboxes/codebase/trunk/viewer/src/: CMakeLists.txt  viewer.cpp
templateToolboxes/codebase/trunk/viewer/src/renderers/: CMakeLists.txt
templateToolboxes/codebase_LCMlibbot/trunk/: tobuild.txt
(+397 files in other folders)
